--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ set(CMAKE_SYSTEM_VERSION 1)
 set(CMAKE_TRY_COMPILE_TARGET_TYPE "STATIC_LIBRARY")
 cmake_minimum_required(VERSION 3.20)
 
-option(BUILD_WITH_CORE "=== Project USE CORE ===" ON)
+option(BUILD_WITH_BLE "=== Project USE BLE ===" ON)
 
 # 工具链设置
 set(TOOLPATH ${CMAKE_SOURCE_DIR}/Toolchain/RISC-V\ Embedded\ GCC/bin/riscv-none-embed-)
@@ -30,17 +30,17 @@ else ()
     MESSAGE(FATAL_ERROR "Unsupported system!")
 endif ()
 
-# 项目设置
 project(ch32v208-freertos C CXX ASM)
+# 定义芯片型号宏
+add_compile_definitions(CH32V20x_D8W)
+
+# 项目设置
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_C_STANDARD 99)
 
 # 编译参数 一般不用改
 add_compile_options(-march=rv32imac -mabi=ilp32 -msmall-data-limit=8 -msave-restore)
 add_compile_options(-fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -fno-common)
-
-# 定义芯片型号宏
-add_compile_definitions(CH32V20x_D8W)
 
 # 链接参数
 add_link_options(-T ${CMAKE_SOURCE_DIR}/Core/Ld/Link.ld)
@@ -52,22 +52,34 @@ add_compile_options(-O2 -g)
 # 编译信息等级
 add_compile_options(-Wall)
 
-# 头文件路径
-include_directories(
-    Core
-    Core/RVMSIS
-    Drivers/Debug
-    Drivers/Debug/printf
-    Drivers/Peripheral/inc
-    Kernel
-    Kernel/FreeRTOS
-    Kernel/FreeRTOS/include
-    Kernel/FreeRTOS/portable/GCC/RISC-V
-    APP/include
-    APP/Profile/include
+# 定义SDK公共头文件路径变量
+set(SDK_INCLUDE_DIRS
+    ${CMAKE_SOURCE_DIR}/Core
+    ${CMAKE_SOURCE_DIR}/Core/RVMSIS
+    ${CMAKE_SOURCE_DIR}/Drivers/Debug
+    ${CMAKE_SOURCE_DIR}/Drivers/Debug/printf
+    ${CMAKE_SOURCE_DIR}/Drivers/Peripheral/inc
+    ${CMAKE_SOURCE_DIR}/Kernel
+    ${CMAKE_SOURCE_DIR}/Kernel/FreeRTOS
+    ${CMAKE_SOURCE_DIR}/Kernel/FreeRTOS/include
+    ${CMAKE_SOURCE_DIR}/Kernel/FreeRTOS/portable/GCC/RISC-V
 )
 
-# 源码文件
+# 添加BLE相关头文件路径
+if(BUILD_WITH_BLE)
+    list(APPEND SDK_INCLUDE_DIRS
+        ${CMAKE_SOURCE_DIR}/Drivers/BLE/LIB
+        ${CMAKE_SOURCE_DIR}/Drivers/BLE/HAL/include
+    )
+endif()
+
+set(SDK_INCLUDE_DIRS ${SDK_INCLUDE_DIRS} CACHE INTERNAL "SDK include directories")
+
+include_directories(${SDK_INCLUDE_DIRS})
+
+
+
+# SDK源码文件
 file(GLOB_RECURSE SOURCES 
                 "Core/RVMSIS/*.c"
                 "Core/Startup/*.S"
@@ -78,18 +90,20 @@ file(GLOB_RECURSE SOURCES
                 "Kernel/FreeRTOS/portable/GCC/RISC-V/*.c"
                 "Kernel/FreeRTOS/portable/GCC/RISC-V/*.S"
                 "Kernel/FreeRTOS/portable/MemMang/heap_4.c"
-                "APP/*.c"
-                "APP/Profile/*.c"
                 )
 
 
-# 编译可执行文件
-add_executable(${PROJECT_NAME}.elf)
 
+
+add_executable(${PROJECT_NAME}.elf)
 target_sources(${PROJECT_NAME}.elf
                 PUBLIC
                     ${SOURCES}
                 )
+
+# 添加APP子目录
+add_subdirectory(APP)
+target_link_libraries(${PROJECT_NAME}.elf app_lib)
 
 # 使用BLE
 if(BUILD_WITH_BLE)
